# taskx

./: .gitignore  FUTURE_FEATURES.md  LOCAL_TESTING_REPORT.md  PHASE_1_AUDIT_REPORT.md  PHASE_1_FINAL_AUDIT.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_1_SPRINT_PLAN.md  PYPI_RELEASE_STRATEGY.md  README.md  RELEASE_CHECKLIST_v0.2.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_PREPARATION_SUMMARY.md  SPRINT_4_AUDIT_REPORT.md  SPRINT_5.5_COMPLETION_REPORT.md  SPRINT_5.5_PROGRESS_REPORT.md  SPRINT_5_6_AUDIT_REPORT.md  SPRINT_5_COMPLETION_REPORT.md  SPRINT_5_PLAN.md  SPRINT_6_COMPLETION_REPORT.md  SPRINT_6_PLAN.md  TECHNICAL_REFERENCE.md  pyproject.toml
.github/workflows/: test.yml  tests.yml
examples/: README.md
examples/crypto-tracker/: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
examples/crypto-tracker/scripts/: analyze_data.py  fetch_prices.py  generate_report.py  validate_data.py
examples/data-science/: pyproject.toml
examples/flask-app/: pyproject.toml
examples/simple-python/: pyproject.toml
scripts/: verify_docs.py
taskx/: __init__.py
taskx/core/: runner.py
tests/: conftest.py
tests/unit/: test_config.py  test_parallel.py  test_task.py  test_watcher.py
